# advent-of-code

./: .gitignore
2019/reason/: bsconfig.json  package-lock.json  package.json
2019/reason/1/: Day1.re  ModuleMasses.re
2019/reason/1/__tests__/: Day1_test.re
2019/reason/2/: Day2.re  Day2Helpers.re  InitialCodes.re
2019/reason/2/__tests__/: Day2_test.re
2019/reason/3/: Day3.re  Day3Helpers.re  Wires.re
2019/reason/3/__tests__/: Day3_test.re
2019/reason/4/: Day4.re  Day4Helpers.re  PasswordInput.re
2019/reason/4/__tests__/: Day4_test.re
2019/reason/5/: Day5.re  Day5Helpers.re  Program.re
2019/reason/6/: Day6.re  Day6Helpers.re  Orbit.re
2019/reason/7/: AmpProgram.re  Day7.re  Day7Helpers.re
2019/reason/8/: Day8.re  Day8Helpers.re  Password.re
2021/kotlin/: README.md
2021/kotlin/src/: Day01.kt  Day01_test.txt  Utils.kt
2022/fsharp/: Day1.fs  Day2.fs  Program.fs  fsharp.fsproj
2022/kotlin/: build.gradle.kts
2022/ocaml/: aoc.opam  dune-project
2022/perl/: Day1.pm  Day2.pm  Main.pl
2022/python/: package-lock.json  package.json  pyrightconfig.json
2022/python/src/: main.py
2022/python/src/day1/: __init__.py
2022/python/src/day2/: __init__.py
2022/python/src/day3/: __init__.py
2022/python/src/day4/: __init__.py
2022/python/src/day5/: __init__.py
2022/python/src/day6/: __init__.py
2022/python/src/utils/: __init__.py
2022/rust/: Cargo.toml
2022/rust/data/: day6.txt
2022/rust/src/: main.rs
2022/rust/src/day1/: mod.rs
2022/rust/src/day2/: mod.rs
2023/rust/: Cargo.toml
2023/rust/src/: main.rs
(+18 files in other folders)
